# joe

./: .rules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  debug_test.rs  justfile  test.ch8
examples/: run_ibm_logo.rs
src/: config.rs  cpu.rs  disassembler.rs  display.rs  emulator.rs  input.rs  instruction.rs  lib.rs  main.rs  memory.rs  rom_loader.rs
src/cli/: analyze.rs  config.rs  mod.rs  run.rs  version.rs
tests/: integration_tests.rs
