[package]
name = "joe"
version = "0.4.0"
edition = "2024"
authors = ["sleb"]
description = "A CHIP-8 emulator written in Rust"
license = "MIT"
repository = "https://github.com/sleb/joe"
keywords = ["emulator", "chip8", "gaming", "interpreter"]
categories = ["emulators", "games"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
crossterm = "0.28"
ctrlc = "3.4"
directories = "5.0"
ratatui = "0.29.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
